kubernetes/basic-tests/ratelimit-with-one-api/gateway-runtime-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-runtime
spec:
  template:
    spec:
      initContainers:
        - name: set-envoy-config
          $patch: delete
      containers:
        - name: cc-envoy
          volumeMounts:
            - name: envoy-config-dir
              $patch: delete
            - mountPath: /etc/cc/security/keystore/mg.pem
              subPath: mg.pem
              name: envoy-certs-vol
            - mountPath: /etc/cc/security/keystore/mg.key
              subPath: mg.key
              name: envoy-certs-vol
            - mountPath: /etc/envoy/envoy.yaml
              subPath: envoy-config.yaml
              name: envoy-yaml-vol
      volumes:
        - name: envoy-yaml-vol
          configMap:
            name: envoy-yaml
        - name: envoy-config-dir
          # emptyDir: {}
          $patch: delete
